# VTU-nikki

./: .dockerignore  .env.docker  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  index.html  package.json  render.yaml  setup.py  vercel.json
backend/: README.md  app.py  config.py  pyproject.toml  requirements.txt
backend/examples/: expected_output.json  today_notes.txt
backend/src/: __init__.py  selenium_submit.py
backend/src/ai/: __init__.py  agent.py  llm_client.py  skill_db.py  vtu_skills.py
backend/src/api/: __init__.py  models.py  routes.py  websocket.py
backend/src/automation/: __init__.py  retry_logic.py  selenium_submission_engine.py  submission_engine.py
backend/src/cli/: __init__.py  commands.py
backend/src/core/: auth.py  driver.py  exceptions.py  form.py  navigation.py  session.py  utils.py
backend/src/core/llm/: base.py  cerebras.py  gemini.py  groq.py  mock.py  openai.py
backend/src/date_management/: __init__.py  date_manager.py  inference.py
backend/src/db/: __init__.py  models.py  session.py
backend/src/input/: __init__.py  audio_processor.py  excel_processor.py  normalizer.py  pdf_processor.py  router.py  text_processor.py  video_processor.py
backend/src/integrations/: calendar_client.py  git_client.py
backend/src/plausibility/: __init__.py  engine.py
backend/src/playwright/: __init__.py  auth.py  driver.py  form.py  navigation.py  submitter.py
backend/src/self_healing/: __init__.py  selectors.py
backend/src/utils/: logger.py
backend/system_prompts/: diary_generator_system.txt  god_mode_system.txt  multi_day_system.txt
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
(+17 files in other folders)
